src/index.css
body {
    text-align: center;
    font-size: 1em;
    font-family: sans-serif;
    margin: 0;
  }

  .header {
    margin-top: 2rem;
  }

  .header i {
    font-size: 1.5rem;
  }

  .header h1 {
    font-weight: bold;
    text-align: center;
    display: inline-block;
    font-size: 1.8rem;
    padding: 0px 10px;
    border-bottom: 1px solid #eee;
    margin: 0 auto;
    /* color: #333; */
  }
  
  .question-style {
    padding: 0.5rem;
    margin-bottom: 1rem;
    cursor: pointer;
  }

  /* rows */
  .row {
    text-align: center;
    display: flex;
    justify-content: center;
  }

  .row > div {
    display: block;
    width: 60px;
    height: 60px;
    border: 1px solid #bbb;
    margin: 4px;
    text-align: center;
    line-height: 60px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 2.5em;
  }
  .row > div.green {
    --background: #5ac85a;
    --border-color: #5ac85a;
    animation: flip 0.5s ease forwards;
  }
  .row > div.grey {
    --background: #a1a1a1;
    --border-color: #a1a1a1;
    animation: flip 0.5s ease forwards;
  }
  .row > div.yellow {
    --background: #e2cc68;
    --border-color: #e2cc68;
    animation: flip 0.5s ease forwards;
  }

  .row.current > div.filled {
    animation: bounce 0.2s ease-in-out forwards;
  }

  .row > div:nth-child(2) {
    animation-delay: 0.2s;
  }

  .row > div:nth-child(3) {
    animation-delay: 0.4s;
  }

  .row > div:nth-child(4) {
    animation-delay: 0.6s;
  }

  .row > div:nth-child(5) {
    animation-delay: 0.8s;
  }

  .row > div:nth-child(6) {
    animation-delay: 1s;
  }

  .keypad {
    max-width: 500px;
    margin: 1.2rem auto;
  }

  .btn {
    width: 60px;
    height: 60px;
    display: inline-block;
    cursor: pointer;
    border-radius: 6px;
    line-height: 50px;
  }

  .btn-style {
    width: 80px;
    height: 60px;
    display: inline-block;
    cursor: pointer;
    border-radius: 6px;
    line-height: 50px;
  }

  .keypad > button.green {
    background: #5ac85a;
    color: #fff;
    transition: all 0.3s ease-in;
  }

  .keypad > button.yellow {
    background: #e2cc68;
    color: #fff;
    transition: all 0.3s ease-in;
  }

  .keypad > button.grey {
    background: #a1a1a1;
    color: #fff;
    transition: all 0.3s ease-in;
  }

  .modal {
    background: rgba(255, 255, 255, 0.7);
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
  }

  .modal > div {
    max-width: 50%;
    background: #fff;
    padding: 40px;
    border-radius: 10px;
    margin: 10% auto;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
  }

  .modal .solution {
    color: #ff004c;
    font-weight: bold;
    font-size: 0.8em;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  .error-message {
    /* background: rgba(255, 255, 255, 0.7); */
    position: fixed;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
  }

  .error-message > div {
    max-width: 500px;
    background: #333;
    padding: 10px;
    border-radius: 10px;
    margin: 1% auto;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
  }

  .error-message .text {
    color: #fff;
    font-weight: bold;
    font-size: 0.8em;
    text-transform: uppercase;
    letter-spacing: 1px;
  }

  .rules {
    text-align: left;
    background: rgba(255, 255, 255, 0.7);
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 1;
  }

  .rules > div {
    max-width: 50%;
    background: #fff;
    padding: 40px;
    border-radius: 10px;
    margin: 10% auto;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
  }

  .cross-icon {
    cursor: pointer;
    float: right;
  }

  /* animations */
  @keyframes flip {
    0% {
      transform: rotateX(0);
      background: #fff;
      border-color: #333;
    }
    45% {
      transform: rotateX(90deg);
      background: #fff;
      border-color: #333;
    }
    55% {
      transform: rotateX(90deg);
      background: var(--background);
      border-color: var(--border-color);
      color: #eee;
    }
    100% {
      transform: rotate(0);
      background: var(--background);
      border-color: var(--border-color);
      color: #eee;
    }
  }

  @keyframes bounce {
    0% {
      transform: scale(1);
      border-color: #ddd;
    }
    50% {
      transform: scale(1.2);
    }
    100% {
      transform: scale(1);
      border-color: #333;
    }
  }

